test/error/StContinueInvalid.fu
public static class Test
{
	public static bool Run()
	{
		continue; //ERROR: 'continue' outside loop
	}
}
